--- a/MauiAppHotel/MainPage.xaml
+++ b/MauiAppHotel/MainPage.xaml
@@ -21,7 +21,7 @@
 
             <Button
                 x:Name="CounterBtn"
-                Text="Click me" 
+                Text="Avançar"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Fill" />
