--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -2,10 +2,22 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.ContratacaoHospedagem"
-             Title="ContratacaoHospedagem">
-    <VerticalStackLayout>
+             Title="ContratacaoHospedagem"
+             NavigationPage.HasNavigationBar="False"
+             BackgroundColor="{StaticResource Gray100}">
+
+    <VerticalStackLayout VerticalOptions="CenterAndExpand">
+
+        <Image
+             Source="hotel.png"
+             HeightRequest="100"
+             Aspect="AspectFit"
+             SemanticProperties.Description="dot net bot in a race car number eight" />
+
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Hotel Fazenda"
+            FontFamily="Montserrat"
+            FontSize="40"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
