--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -6,7 +6,8 @@
              NavigationPage.HasNavigationBar="False"
              BackgroundColor="{StaticResource Gray100}">
 
-    <VerticalStackLayout VerticalOptions="CenterAndExpand">
+    <VerticalStackLayout VerticalOptions="CenterAndExpand"
+                         Padding="10">
 
         <Image
              Source="hotel.png"
@@ -18,7 +19,18 @@
             Text="Hotel Fazenda"
             FontFamily="Montserrat"
             FontSize="40"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            TextColor="{StaticResource Primary}"
+
+            Text="Calculo da Diaria"
+            FontFamily="Montserrat"
+            FontSize="20"
+            TextColor="{StaticResource Primary}" />
+
+        <Frame Padding="10">
+            <VerticalStackLayout>
+                
+            </VerticalStackLayout>
+        </Frame>
+
     </VerticalStackLayout>
 </ContentPage>
