--- a/MauiAppHotel/AppShell.xaml
+++ b/MauiAppHotel/AppShell.xaml
@@ -5,10 +5,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MauiAppHotel"
     Shell.FlyoutBehavior="Disabled"
-    Title="MauiAppHotel">
+    Title="MauiAppHotel"
+    NavigationPage.HasNavigationBar="False"
+    BackgroundColor="{StaticResource Gray100}">
 
     <ShellContent
-        Title="Home"
+        Title=""
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
