--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -3,8 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.ContratacaoHospedagem"
              Title="ContratacaoHospedagem"
-             NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray100}">
+             NavigationPage.HasNavigationBar="False">
+
+    <ContentPage.Background>
+        <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
+            <GradientStop Color="Purple" Offset="0.3" />
+            <GradientStop Color="Blue" Offset="1.1" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
 
     <VerticalStackLayout VerticalOptions="CenterAndExpand"
                          Padding="10">
@@ -19,7 +25,8 @@
             Text="Cálculo da Diária"
             FontFamily="Montserrat"
             FontSize="40"
-            TextColor="{StaticResource Black}" />
+            HorizontalOptions="Center"
+            TextColor="{StaticResource Magenta}" />
 
         <Frame Padding="10">
             <VerticalStackLayout>
@@ -83,7 +90,9 @@
 
                 </Frame>
 
-                <Button Text="Avançar" />
+                <Button Text="Avançar" 
+                        TextColor="NavajoWhite"
+                        Clicked="Button_Clicked"  />
 
             </VerticalStackLayout>
         </Frame>
