--- a/MauiAppHotel/Views/HospedagemContratada.xaml
+++ b/MauiAppHotel/Views/HospedagemContratada.xaml
@@ -2,11 +2,67 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.HospedagemContratada"
-             Title="HospedagemContratada">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             NavigationPage.HasNavigationBar="False">
+
+    <ContentPage.Background>
+        <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
+            <GradientStop Color="Purple" Offset="0.3" />
+            <GradientStop Color="Blue" Offset="1.1" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <VerticalStackLayout VerticalOptions="CenterAndExpand">
+
+        <Image
+                Source="hotel.png"
+                HeightRequest="100" />
+
+        <Label Text="Suíte Super Luxo"
+                    TextColor="NavajoWhite"
+                    FontFamily="Montserrat"
+                    FontSize="30"
+                    HorizontalTextAlignment="Center"/>
+
+        <Frame Margin="10">
+            <HorizontalStackLayout>
+                
+                <HorizontalStackLayout>
+                    <Label Text="Adultos: " TextColor="{StaticResource Black}"  />
+                    <Label Text="2" TextColor="{StaticResource Primary}" />
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout>
+                    <Label Text="Crianças: " TextColor="{StaticResource Black}"  />
+                    <Label Text="1" TextColor="{StaticResource Primary}" />
+                </HorizontalStackLayout>
+
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Margin="10">
+            <Grid ColumnDefinitions="*, *, *"
+                      RowDefinitions="Auto, Auto">
+
+                <Label Grid.Row="0" Grid.Column="0" Text="Check-in" TextColor="{StaticResource Black}" />
+                <Label Grid.Row="0" Grid.Column="1" Text="Check-out" TextColor="{StaticResource Black}" />
+                <Label Grid.Row="0" Grid.Column="2" Text="Estadia" TextColor="{StaticResource Black}" />
+
+                <Label Grid.Row="1" Grid.Column="0" Text="27/062025" TextColor="{StaticResource Primary}" />
+                <Label Grid.Row="1" Grid.Column="1" Text="10/07/2015" TextColor="{StaticResource Primary}" />
+                <Label Grid.Row="1" Grid.Column="2" Text="15"  TextColor="{StaticResource Primary}" />
+
+            </Grid>
+        </Frame>
+
+        <Frame Margin="10">
+            <HorizontalStackLayout>
+
+                <Label Text="Valor Total:  " TextColor="{StaticResource Black}" />
+                <Label Text=" R$ 3.670,00" TextColor="{StaticResource Primary}" />
+
+            </HorizontalStackLayout>
+        </Frame>
+        
     </VerticalStackLayout>
+    
 </ContentPage>
