--- a/MauiAppHotel/App.xaml
+++ b/MauiAppHotel/App.xaml
@@ -16,6 +16,7 @@
 
             <Style TargetType="Label">
                 <Setter Property="VerticalTextAlignment" Value="Center" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
             </Style>
 
         </ResourceDictionary>
