--- a/MauiAppHotel/Views/HospedagemContratada.xaml
+++ b/MauiAppHotel/Views/HospedagemContratada.xaml
@@ -28,12 +28,12 @@
                 
                 <HorizontalStackLayout>
                     <Label Text="Adultos: " TextColor="{StaticResource Black}"  />
-                    <Label Text="2" TextColor="{StaticResource Primary}" />
+                    <Label Text="{Binding QntAdultos}" TextColor="{StaticResource Primary}" />
                 </HorizontalStackLayout>
 
                 <HorizontalStackLayout>
                     <Label Text="Crianças: " TextColor="{StaticResource Black}"  />
-                    <Label Text="1" TextColor="{StaticResource Primary}" />
+                    <Label Text="{Binding QntCriancas}" TextColor="{StaticResource Primary}" />
                 </HorizontalStackLayout>
 
             </HorizontalStackLayout>
@@ -47,9 +47,9 @@
                 <Label Grid.Row="0" Grid.Column="1" Text="Check-out" TextColor="{StaticResource Black}" />
                 <Label Grid.Row="0" Grid.Column="2" Text="Estadia" TextColor="{StaticResource Black}" />
 
-                <Label Grid.Row="1" Grid.Column="0" Text="27/062025" TextColor="{StaticResource Primary}" />
-                <Label Grid.Row="1" Grid.Column="1" Text="10/07/2015" TextColor="{StaticResource Primary}" />
-                <Label Grid.Row="1" Grid.Column="2" Text="15"  TextColor="{StaticResource Primary}" />
+                <Label Grid.Row="1" Grid.Column="0" Text="{Binding DataCheckIn, StringFormat='{}{0:dd/MM/yyyy}'}" TextColor="{StaticResource Primary}" />
+                <Label Grid.Row="1" Grid.Column="1" Text="{Binding DataCheckOut, StringFormat='{}{0:dd/MM/yyyy}'}" TextColor="{StaticResource Primary}" />
+                <Label Grid.Row="1" Grid.Column="2" Text="{Binding Estadia}"  TextColor="{StaticResource Primary}" />
 
             </Grid>
         </Frame>
@@ -59,7 +59,7 @@
 
                 <Label Text="Valor Total:  " 
                        TextColor="{StaticResource Black}" />
-                <Label Text=" R$ 3.670,00" 
+                <Label Text="{Binding ValorTotal, StringFormat='{}{0:c}'}" 
                        TextColor="{StaticResource Primary}" />
 
             </HorizontalStackLayout>
