--- a/MauiAppHotel/MainPage.xaml
+++ b/MauiAppHotel/MainPage.xaml
@@ -11,9 +11,7 @@
             Spacing="25">
             <Image
                 Source="hotel.png"
-                HeightRequest="100"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+                HeightRequest="100" />
 
             <Label
                 Text="Hotel Fazenda"
