--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -18,9 +18,7 @@
 
         <Image
              Source="hotel.png"
-             HeightRequest="100"
-             Aspect="AspectFit"
-             SemanticProperties.Description="dot net bot in a race car number eight" />
+             HeightRequest="100" />
 
         <Label
             Text="Cálculo da Diária"
