--- a/MauiAppHotel/MainPage.xaml
+++ b/MauiAppHotel/MainPage.xaml
@@ -2,29 +2,43 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.MainPage"
-             NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray100}">
+             NavigationPage.HasNavigationBar="False">
+
+    <ContentPage.Background>
+        <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
+            <GradientStop Color="Purple" Offset="0.3" />
+            <GradientStop Color="Blue" Offset="1.1" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
 
     <ScrollView>
         <VerticalStackLayout
-            Padding="30,0"
+            Padding="0,50,0,0"
             Spacing="25">
+
             <Image
                 Source="hotel.png"
                 HeightRequest="100" />
 
             <Label
                 Text="Hotel Fazenda"
+                TextColor="NavajoWhite"
                 FontFamily="Montserrat"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+                FontSize="50"/>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Avançar"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+            <Label
+                Text="Tranquilidade, seguraça e conforto..."
+                TextColor="NavajoWhite"
+                FontFamily="Montserrat.Bold"
+                FontSize="15"/>
+
+            <Button Text="Avançar"
+                    HorizontalOptions="Center"
+                    Clicked="Button_Clicked"/>
+
+            <Button Text="Sobre"
+                    HorizontalOptions="Center"/>
+
         </VerticalStackLayout>
     </ScrollView>
 
