--- a/MauiAppHotel/SobrePage.xaml
+++ b/MauiAppHotel/SobrePage.xaml
@@ -2,7 +2,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.SobrePage"
-             Title="SobrePage"
              NavigationPage.HasNavigationBar="False">
 
     <ContentPage.Background>
@@ -12,35 +11,40 @@
         </LinearGradientBrush>
     </ContentPage.Background>
 
-    <VerticalStackLayout>
+    <VerticalStackLayout Padding="20" Spacing="15" VerticalOptions="Center">
 
         <Image
                 Source="hotel.png"
-                HeightRequest="100" />
+                HeightRequest="100"
+                HorizontalOptions="Center" />
 
         <Label Text="Desenvolvedor:"
                FontAttributes="Bold"
-               FontSize="25"
-               TextColor="Gray" />
+               FontSize="20"
+               TextColor="Gray"
+               HorizontalOptions="Center" />
 
         <Label Text="Izaias Correa Filho"
-               FontSize="18"
-               TextColor="Gray" />
+               FontSize="16"
+               TextColor="Gray"
+               HorizontalOptions="Center" />
 
         <Label Text="Email: izaiascorreafilho@email.com"
-               FontSize="16"
-               TextColor="Gray" />
+               FontSize="14"
+               TextColor="Gray"
+               HorizontalOptions="Center" />
 
         <Label Text="Projeto Desenvolvido em .NET MAUI"
-               FontSize="16"
-               TextColor="Gray" />
+               FontSize="14"
+               TextColor="Gray"
+               HorizontalOptions="Center" />
 
         <Button Text="Voltar"
                 Padding="10"
-                Margin="15"
+                Margin="20"
                 HorizontalOptions="Center"
                 Clicked="Button_Clicked" />
 
     </VerticalStackLayout>
-    
+
 </ContentPage>
