--- a/MauiAppHotel/AppShell.xaml
+++ b/MauiAppHotel/AppShell.xaml
@@ -4,10 +4,10 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MauiAppHotel"
-    Shell.FlyoutBehavior="Disabled"
     Title="MauiAppHotel"
+    BackgroundColor="{StaticResource Gray100}"
     NavigationPage.HasNavigationBar="False"
-    BackgroundColor="{StaticResource Gray100}">
+    Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title=""
